# petroleum-survival

./: .agent.md  .clang-format  .gitattributes  .gitignore  AGENT.md  BALANCING.md  CMakeLists.txt  ENEMY_SYSTEM.md  README.md  TODO.md
assets/shaders/: particle.frag.glsl  particle.vert.glsl  pbr.frag.glsl  pbr.vert.glsl  shadow.vert.glsl
cmake/: FindTargets.cmake  MakeFolder.cmake  Packages.cmake
scripts/: hdr_to_cubemap.py  pyproject.toml  unpack_arm.py
src/: CMakeLists.txt
src/core/: app.cpp  app.hpp  main.cpp
src/game/: enemy_spawner.cpp  enemy_spawner.hpp  game.cpp  game.hpp  game_events.hpp  map_manager.cpp  map_manager.hpp  stat_manager.cpp  stat_manager.hpp  upgrade.cpp  upgrade.hpp  vfx_handler.hpp
src/graphics/: animation.cpp  animation.hpp  animation_data.hpp  animation_state.hpp  animator.cpp  animator.hpp  bone.cpp  bone.hpp  camera.cpp  camera.hpp  camera_controller.cpp  camera_controller.hpp  debug_drawer.cpp  debug_drawer.hpp  ibl_generator.cpp  ibl_generator.hpp  idrawable.hpp  izdrawable.hpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  particle_system.cpp  particle_system.hpp  render_context.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_uniforms.hpp  shadow_map.cpp  shadow_map.hpp  skybox.cpp  skybox.hpp  texture.cpp  texture.hpp
src/resource/: animation_manager.cpp  animation_manager.hpp  lighting_manager.cpp  lighting_manager.hpp  material_manager.cpp  material_manager.hpp  model_manager.cpp  model_manager.hpp  shader_manager.cpp  shader_manager.hpp  texture_manager.cpp  texture_manager.hpp
src/scene/: enemy.hpp  entity.hpp  exp.hpp  game_factories.cpp  game_factories.hpp  game_object.cpp  game_object.hpp  game_object_factory.hpp  game_object_manager.hpp  humanoid_entity.hpp  humanoid_locomotion_state.hpp  i_entity_context.hpp  item.hpp  map_population_system.cpp  map_population_system.hpp  player.hpp  projectile.hpp  static_prop.cpp  static_prop.hpp  weapon.hpp
src/scene/enemy/: car_enemy.hpp  enemy.hpp  humanoid_enemies.hpp  humanoid_enemy.hpp  i_enemy_context.hpp
src/scene/weapon/: i_weapon_context.hpp  magic_wand.hpp  projectile_weapon.hpp  weapon.hpp
src/scene/weapons/: gas_nozzle.hpp  gas_nozzle_e20.hpp  gas_nozzle_e95.hpp  lighter.hpp  magic_wand.hpp  melee_projectile.hpp  orbiting_cones.hpp  toxic_fumes.hpp  water_bottle.hpp  wood_block.hpp
src/ui/: damage_text_manager.cpp  damage_text_manager.hpp  font.cpp  font.hpp  level_up_ui.cpp  level_up_ui.hpp  ui_level_up.cpp  ui_level_up.hpp  ui_manager.cpp  ui_manager.hpp  ui_menu.cpp  ui_menu.hpp
src/utility/: aabb.hpp  comptime_string.hpp  enum_map.hpp  event_bus.hpp  name_hash.hpp  not_initialized.hpp  random.hpp  type_of.hpp  utility.hpp
